# Perch

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml
apps/web/: .env.example  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  landing-template.html  layout.tsx  page.tsx
apps/web/app/dashboard/: InstallSnippetButton.tsx  actions.ts  page.tsx
apps/web/app/widget-demo/: page.tsx
apps/web/components/landing/: DashboardPreviewSection.tsx  FaqSection.tsx  FeaturesSection.tsx  FinalCtaSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  LiveDemoSection.tsx  PricingSection.tsx  TechnicalTrustSection.tsx  TrustStrip.tsx  UseCasesSection.tsx
apps/web/components/product/: BrowserMockup.tsx  ChatWidgetMock.tsx  DashboardMockup.tsx
apps/web/components/site/: SiteFooter.tsx  SiteHeader.tsx
apps/web/components/widget/: CopySnippetButton.tsx  PerchWidget.tsx  SiteInteractions.tsx  perchApi.ts
crates/perch-config/: Cargo.toml
crates/perch-config/src/: lib.rs
crates/perch-storage/: Cargo.toml
crates/perch-storage/src/: lib.rs
crates/perch-types/: Cargo.toml
crates/perch-types/src/: lib.rs
crates/perch-types/src/api/: mod.rs
crates/perch-types/src/events/: mod.rs
crates/perch-types/src/identifiers/: mod.rs
crates/rag-core/: Cargo.toml
crates/rag-core/src/: lib.rs
crates/rag-core/src/chunking/: mod.rs
crates/rag-core/src/citations/: mod.rs
crates/rag-core/src/documents/: mod.rs
crates/rag-core/src/embeddings/: mod.rs
crates/rag-core/src/retrieval/: mod.rs
crates/rag-core/src/sources/: mod.rs
docs/: api.md  architecture.md  demo.md  deployment.md  development.md  release-checklist.md  security-model.md  widget.md
infra/database/migrations/: 0001_foundation.sql  0002_crawl_jobs.sql
infra/docker/: gateway.Dockerfile  indexer.Dockerfile  retrieval.Dockerfile
infra/postgres/: postgresql.conf
infra/qdrant/: production.yaml
infra/redis/: redis.conf
scripts/: portfolio-demo.sh  smoke-test.sh
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/gateway/src/application/: sites.rs
services/gateway/src/domain/: messages.rs  mod.rs  sites.rs
services/gateway/src/infrastructure/: indexer.rs  mod.rs  retrieval.rs  storage.rs
services/gateway/src/interfaces/http/: mod.rs
services/indexer/: Cargo.toml
services/indexer/src/: main.rs
services/indexer/src/application/: indexing.rs
services/indexer/src/domain/: pages.rs
services/indexer/src/infrastructure/: crawler.rs  mod.rs  qdrant.rs  storage.rs
services/indexer/src/interfaces/http/: mod.rs
services/retrieval/: Cargo.toml
services/retrieval/src/: main.rs
services/retrieval/src/application/: answering.rs
services/retrieval/src/domain/: context.rs
services/retrieval/src/infrastructure/: llm.rs  mod.rs  qdrant.rs  storage.rs
services/retrieval/src/interfaces/http/: mod.rs
