[workspace]
members = [
  "crates/perch-config",
  "crates/perch-types",
  "crates/rag-core",
  "services/gateway",
  "services/indexer",
  "services/retrieval"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Hqzdev/Perch"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
perch-config = { path = "crates/perch-config" }
perch-types = { path = "crates/perch-types" }
rag-core = { path = "crates/rag-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
